corrected getting the specific inventory product